completed user and post modules

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,7 @@
 spring.application.name=My-Instagram
+spring.datasource.url=jdbc:postgresql://localhost:5432/mini_insta
+spring.datasource.username=postgres
+spring.datasource.password=asma123
+
+spring.jpa.show-sql=true
+spring.jpa.hibernate.ddl-auto=update
